# Course-Design

./: README.md
Data Structure/: README.md  info.txt
Data Structure/Source-Code/: main.cpp  sqlist.cpp  sqlist.h
Winter/: .clang-format  .gitignore  CMakeLists.txt  README.md
Winter/Project1/: CMakeLists.txt
Winter/Project1/docs/: project1.tex
Winter/Project1/src/: Maze.cpp  Maze.h  main.cpp
Winter/Project1/src/includes/: Stack.h
Winter/Project2/: CMakeLists.txt
Winter/Project2/docs/: project2.tex
Winter/Project2/src/: Car.h  ParkLot.h  main.cpp
Winter/Project2/src/includes/: Queue.h  Stack.h
Winter/Project3/: .gitignore  CMakeLists.txt
Winter/Project3/docs/: project3.tex
Winter/Project3/src/: Huffman.h  main.cpp
